Fix minor bug on restaurant view header overflow.

--- a/app/assets/stylesheets/restaurant_view.scss
+++ b/app/assets/stylesheets/restaurant_view.scss
@@ -19,8 +19,8 @@
 
 .restaurant-page .header {
   width: 100%;
-  height: 125px;
   background: rgba(73, 72, 72, 1);
+  padding: 0 20px 20px 0;
 }
 
 .header-content {
